changed table div width to 99% to prevent cropping

--- a/css/jquery-responsive-TeamRaiser-tables.css
+++ b/css/jquery-responsive-TeamRaiser-tables.css
@@ -3,7 +3,7 @@
 }
 
 #teamRosterTable {
-    width: 100%;
+    width: 99%;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid #D0D9E0;
